DMC-E系列控制卡例程/VB6.0/例5_总线操作/LTDMC.bas

Attribute VB_Name = "Module1"

Option Explicit
''''''''''''''''''''''''''''''''''  Leadshine technology  ''''''''''''''''''''''''
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''

''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
'''                                 LTDMC V1.1 函数列表                           ''''
''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''''
        
        '函数库打印输出
        Declare Function dmc_set_debug_mode Lib "LTDMC.dll" (ByVal mode As Integer, ByVal FileName As String) As Integer
        Declare Function dmc_get_debug_mode Lib "LTDMC.dll" (ByRef mode As Integer, ByRef FileName As String) As Integer
        '板卡配置
        Declare Function dmc_board_init Lib "LTDMC.dll" () As Integer           '初始化控制卡
        Declare Function dmc_board_init_onecard Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_board_close_onecard Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_get_CardInfList Lib "LTDMC.dll" (ByRef CardNum As Integer, ByRef CardTypeList As Long, ByRef CardIdList As Integer) As Integer '获取所有卡号
        Declare Function dmc_board_close Lib "LTDMC.dll" () As Integer          '关闭控制卡
        Declare Function dmc_board_reset Lib "LTDMC.dll" () As Integer
        Declare Function dmc_board_reset_onecard Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_soft_reset Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_cool_reset Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_original_reset Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        Declare Function dmc_get_card_ID Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef CardID As Long) As Integer
        Declare Function dmc_get_release_version Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal ReleaseVersion As String) As Integer
        Declare Function dmc_get_card_version Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef CardVersion As Long) As Integer     '读取控制卡硬件版本
        Declare Function dmc_get_card_soft_version Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef FirmID As Long, ByRef SubFirmID As Long) As Integer           '读取控制卡硬件的固件版本
        Declare Function dmc_get_card_lib_version Lib "LTDMC.dll" (ByRef LibVer As Long) As Integer       '读取控制卡动态库版本
        Declare Function dmc_get_total_axes Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalAxis As Long) As Integer         '读取指定卡轴数
        Declare Function dmc_get_total_liners Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalAxis As Long) As Integer
        Declare Function dmc_get_total_ionum Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalIn As Integer, ByRef TotalOut As Integer) As Integer
        Declare Function dmc_get_total_adcnum Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef TotalIn As Integer, ByRef TotalOut As Integer) As Integer
        
                '密码管理
        Declare Function dmc_write_sn Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal str_sn As String) As Integer
        Declare Function dmc_check_sn Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal str_sn As String) As Integer
        
         '运动模块脉冲模式
        Declare Function dmc_set_pulse_outmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal outmode As Integer) As Integer    '设定脉冲输出模式
        Declare Function dmc_get_pulse_outmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef outmode As Integer) As Integer      '读取脉冲输出模式
        Declare Function dmc_get_equiv Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef equiv As Double) As Integer       '脉冲当量
        Declare Function dmc_set_equiv Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal equiv As Double) As Integer
        Declare Function dmc_set_backlash_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal backlash As Double) As Integer  '反向间隙
        Declare Function dmc_get_backlash_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef backlash As Double) As Integer
        Declare Function dmc_set_backlash Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal backlash As Long) As Integer  '反向间隙
        Declare Function dmc_get_backlash Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef backlash As Long) As Integer
        
         '通用文件下载
       ''函数参数必须严格保持一致性
        Declare Function dmc_download_file Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal pFileName As String, ByRef pfilenameinControl As Byte, ByVal filetype As Integer) As Integer
        Declare Function dmc_download_memfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef pbuffer As Byte, ByVal buffsize As Long, ByRef pFileName As Byte, ByVal filetype As Integer) As Integer
        Declare Function dmc_upload_file Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal pFileName As String, ByRef pfilenameinControl As Byte, ByVal filetype As Integer) As Integer
        Declare Function dmc_upload_memfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef pbuffer As Byte, ByVal buffsize As Integer, ByVal pFileName As String, ByRef pfilenameinControl As Byte, ByRef puifilesize As Integer, ByVal filetype As Integer) As Integer
        '下载参数文件
        Declare Function dmc_download_configfile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal FileName As String) As Integer
        '下载固件文件
        Declare Function dmc_download_firmware Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal FileName As String) As Integer
        Declare Function dmc_get_progress Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef process As Single) As Integer
        
         '限位/异常设置
        Declare Function dmc_set_softlimit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal source_sel As Integer, ByVal SL_action As Integer, ByVal N_limit As Long, ByVal P_limit As Long) As Integer  '设置软限位参数
        Declare Function dmc_get_softlimit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef source_sel As Integer, ByRef SL_action As Integer, ByRef N_limit As Long, ByRef P_limit As Long) As Integer    '读取软限位参数
        Declare Function dmc_set_el_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal el_enable As Integer, ByVal el_logic As Integer, ByVal el_mode As Integer) As Integer      '设置EL信号
        Declare Function dmc_get_el_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef el_enable As Integer, ByRef el_logic As Integer, ByRef el_mode As Integer) As Integer   '读取设置EL信号
        Declare Function dmc_set_emg_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal emg_logic As Integer) As Integer    '设置EMG信号
        Declare Function dmc_get_emg_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enbale As Integer, ByRef emg_logic As Integer) As Integer        '读取设置EMG信号
        
        '单轴运动
        '速度设置
        Declare Function dmc_set_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Min_Vel As Double, ByVal max_vel As Double, ByVal tacc As Double, ByVal tdec As Double, ByVal stop_vel As Double) As Integer '设定速度曲线参数
        Declare Function dmc_get_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Min_Vel As Double, ByRef max_vel As Double, ByRef tacc As Double, ByRef tdec As Double, ByRef stop_vel As Double) As Integer '读取速度曲线参数
        Declare Function dmc_set_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Min_Vel As Double, ByVal max_vel As Double, ByVal tacc As Double, ByVal tdec As Double, ByVal stop_vel As Double) As Integer   '单轴速度参数
        Declare Function dmc_get_profile_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Min_Vel As Double, ByRef max_vel As Double, ByRef tacc As Double, ByRef tdec As Double, ByRef stop_vel As Double) As Integer
        Declare Function dmc_set_acc_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Min_Vel As Double, ByVal max_vel As Double, ByVal tacc As Double, ByVal tdec As Double, ByVal stop_vel As Double) As Integer '设定速度曲线参数
        Declare Function dmc_get_acc_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Min_Vel As Double, ByRef max_vel As Double, ByRef tacc As Double, ByRef tdec As Double, ByRef stop_vel As Double) As Integer '读取速度曲线参数
        Declare Function dmc_set_profile_unit_acc Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Min_Vel As Double, ByVal max_vel As Double, ByVal tacc As Double, ByVal tdec As Double, ByVal stop_vel As Double) As Integer   '单轴速度参数
        Declare Function dmc_get_profile_unit_acc Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef Min_Vel As Double, ByRef max_vel As Double, ByRef tacc As Double, ByRef tdec As Double, ByRef stop_vel As Double) As Integer
        Declare Function dmc_set_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal s_mode As Integer, ByVal s_para As Double) As Integer        '设置平滑速度曲线参数
        Declare Function dmc_get_s_profile Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal s_mode As Integer, ByRef s_para As Double) As Integer    '读取平滑速度曲线参数
    
        '点位运动
        Declare Function dmc_pmove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long, ByVal posi_mode As Integer) As Integer  '指定轴做定长位移运动
        Declare Function dmc_pmove_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal posi_mode As Integer) As Integer  '定长
         'JOG运动
        Declare Function dmc_vmove Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal dir As Integer) As Integer    '指定轴做连续运动
        Declare Function dmc_pmove_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Double, ByVal Min_Vel As Double, ByVal max_vel As Double, ByVal tacc As Double, ByVal tdec As Double, ByVal stop_vel As Double, ByVal s_para As Double, ByVal posi_mode As Integer) As Integer '设定速度曲线参数
        
        Declare Function dmc_reset_target_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long, ByVal posi_mode As Integer) As Integer  '运动中改变目标位置
        Declare Function dmc_change_speed Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Curr_Vel As Double, ByVal Taccdec As Double) As Integer        '在线改变指定轴的当前运动速度
        Declare Function dmc_update_target_position Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal Dist As Long, ByVal posi_mode As Integer) As Integer  '强行改变目标位置
        Declare Function dmc_reset_target_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal New_pos As Double) As Integer   '在线变位
        Declare Function dmc_update_target_position_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal New_pos As Double) As Integer   '强行变位
        Declare Function dmc_change_speed_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal New_vel As Double, ByVal Taccdec As Double) As Integer           '在线变速
